--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,5 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+MY_KEY="f4156cb83e1948c5924ae9a3c7535ae0"
+MY_URL="https://newsapi.org"
